# lfpack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docs.yml  publish_to_pypi.yaml  tests.yml
docs/: README.txt  _quarto.yml  index.qmd  objects.json  references.bib
docs/explanation/: gallery.qmd  pipeline.qmd
docs/how-to/: binned-reads.qmd  bwm-dataset.qmd  multi-recording.qmd
docs/reference/: LFPCompressed.qmd  LFPackReader.qmd  _sidebar.yml  compress.qmd  compress_bin_to_h5.qmd  compress_pipeline.qmd  compress_to_h5.qmd  decompress.qmd  hdf5-layout.qmd  index.qmd  merge_h5.qmd  run_cadzow_checkpoint.qmd  subset_h5.qmd
docs/tutorials/: first-compression.qmd
src/lfpack/: __init__.py  _core.py
tests/: test_lfpack.py
