[project]
name = "lfpack"
version = "0.1.0"
description = "LFP codec — lossy compression of local-field-potential recordings via adaptive SVD and wavelet-packet thresholding"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "The International Brain Laboratory" }]
dependencies = [
    "ibl-neuropixel",
    "numpy",
    "scipy",
    "h5py",
    "PyWavelets",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/int-brain-lab/lfpack"
"Bug Tracker" = "https://github.com/int-brain-lab/lfpack/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lfpack"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.4.0",
]
